src/components/MobileMenu/MobileMenu.module.scss
@import '../../styles/main';

.linkWrapper {
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
  justify-content: flex-start;
  padding-top: 30px;
}

.topWrapper {
  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  width: 100vw;
  height: 100vh;
  z-index: 1;
  background-color: var(--color-background);
  border-top: 1px solid var(--color-elements);
}

.menuOverlay {
  display: flex;
  justify-content: end;
  flex-direction: column;
  right: 0;
  height: calc(100vh - $height-on-tablet - 1px);
  width: 100%;
  background-color: var(--color-background);
}

.show {
  display: flex;
  justify-content: center;
}

.nav {
  display: flex;
  align-items: center;
  flex-direction: column;
  gap: 16px;
}

.item {
  @extend %uppercase-text;
  color: var(--color-secondary);
  padding: 8px 0;
}

.actions {
  display: flex;
  width: 100%;
  left: 0;
  bottom: 1px;
}

.action {
  display: flex;
  flex: 1;
  height: 64px;
  align-items: center;
  justify-content: center;
  color: var(--color-secondary);
  box-shadow: 0 -1px 0 0 var(--color-elements), 1px 0 0 0 var(--color-elements);
  cursor: pointer;
}

.actionIcon {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  height: 28px;
}

.count {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  top: 0;
  left: 14px;
  width: 14px;
  height: 14px;
  border-radius: 50%;
  border: 1px solid var(--color-background);
  background-color: var(--color-red);
}

.countText {
  color: #F1F2F9;
  font-size: 9px;
  font-weight: 700;
  line-height: 11.5px;
  text-align: center;
}

.item,
.action {
  display: flex;
  justify-content: center;
  position: relative;

  &:hover {
    color: var(--color-primary);
  }
}

.isActive {
  color: var(--color-primary);

  &::after {
    position: absolute;
    content: "";
    bottom: 0;
    left: 0;
    right: 0;
    height: 2px;
    background-color: var(--color-primary);
  }
}

.item {
  display: inline;
}

.action {
  width: calc(100% / 3);
}

.count {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  width: 14px;
  height: 14px;
  border-radius: 50%;
  border: 1px solid var(--color-background);
  background-color: var(--color-red);
  top: 17px;
  left: 82px;
}

.countText {
  color: #F1F2F9;
  font-size: 9px;
  font-weight: 400;
  line-height: 10px;
  text-align: center;

  @extend %h4-mobile;
}

.hidden {
  display: none !important;
}

